# otus_lab_3_allocator

./: .gitignore  .travis.yml  CMakeLists.txt  fallocator.h  list.h  list_iterator.h  list_node.h  otus_lab_3_allocator.cpp
src/: CMakeLists.txt  factorial.cpp  factorial.h  fallocator.h  list.h  list_iterator.h  list_node.h  log_allocator.h  otus_lab_3_allocator.cpp
tests/: CMakeLists.txt  list_test.cpp
